--- a/index.html
+++ b/index.html
@@ -1,12 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    this is a change
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fear Setting</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
+    />
+    <link rel="stylesheet" href="normalize.css" />
+  </head>
+  <body>
+    <nav class="uk-navbar-container" uk-navbar>
+      <div class="uk-navbar-left">
+        <ul class="uk-navbar-nav">
+          <li class="uk-active"><a href="">About Us</a></li>
+          <li class="uk-parent"><a href="">Current Activities</a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav class="uk-navbar-container" uk-navbar>
+      <div class="uk-navbar-left">
+        <ul class="uk-navbar-nav">
+          <li class="uk-active"><a href="">Username</a></li>
+          <li class="uk-parent"><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </nav>
+    <div uk-grid>
+      <div class="uk-column-1-3">
+        <div class="uk-card uk-card-large uk-card-default">
+          <h3>Fear of the Month</h3>
+          <form></form>
+        </div>
+        <div class="uk-card uk-card-large uk-card-default">
+          <h3>Fear of the Day</h3>
+          <form>
+            <textarea class="uk-textarea"></textarea>
+            <input class="uk-checkbox" type="checkbox" />
+          </form>
+        </div>
+        <div class="uk-card uk-card-large uk-card-default">
+          <h3>Fear Conquered</h3>
+          <input class="uk-checkbox" type="checkbox" />
+        </div>
+      </div>
+    </div>
+    <button class="uk-button uk-button-default">Invite Friends</button>
+  </body>
 </html>
