structured the sheet, added ghost icon, added the various pages we need to build, and a scroll bar

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
     />
-    <link rel="stylesheet" href="normalize.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="Develop/Style/normalize.css" />
+    <link rel="stylesheet" href="Develop/Style/style.css" />
+  
   </head>
   <body>
     <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-left" id="navBar1"> <!--Adding an ID for styling in css -->
         <ul class="uk-navbar-nav" id="navBarLinks">
+          <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
           <li class="uk-active"><a href="">Creat an Account</a></li>
           <li class="uk-active"><a href="">User Guide</a></li>
           <li class="uk-active"><a href=""></a></li>
@@ -56,5 +58,9 @@
       </div>
     </div>
     <button class="uk-button uk-button-default">Invite Friends</button>
+  
+  <script></script>
+  <script></script>
+  <script></script>
   </body>
 </html>
