--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <ul class="uk-navbar-nav" id="navBarLinks">
           <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
           <li class="uk-active"><a href="">Create an Account</a></li>
-          <li class="uk-active"><a href="">User Guide</a></li>
+          <li class="uk-active"><a href="userGuide.html">User Guide</a></li>
           <li class="uk-active"><a href=""></a></li>
-          <li class="uk-active"><a href="">Monthly Plan</a></li>
-          <li class="uk-active"><a href="">We Challenge You</a></li>
+          <li class="uk-active"><a href="monthlyPlan.html">Monthly Plan</a></li>
+          <li class="uk-active"><a href="challenge.html">We Challenge You</a></li>
           <li><a href=""></a></li>
         </ul>
       </div>
@@ -75,8 +75,10 @@
       </ul>
       </div>
     </div>
-
-    <button class="uk-button uk-button-default">Invite Friends</button>
+    <form action="inviteFriends.html" method="get" target="_blank">
+      <button class="uk-button uk-button-default" a href="inviteFriends.html">Invite Friends</button>
+   </form>
+    <!-- <button class="uk-button uk-button-default" a href="inviteFriends.html">Invite Friends</button> -->
   
   <script></script>
   <script></script>
