Added profile picture.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="uk-navbar-container" uk-navbar>
       <div class="uk-navbar-left" id="navBar1"> <!--Adding an ID for styling in css -->
         <ul class="uk-navbar-nav" id="navBarLinks">
-          <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
+          <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png" alt="Ghost logo"/>
           <li class="uk-active"><a href="">Create an Account</a></li>
           <li class="uk-active"><a href="userGuide.html">User Guide</a></li>
           <li class="uk-active"><a href=""></a></li>
@@ -30,6 +30,7 @@
     <nav class="uk-navbar-container" uk-navbar>
        <div class="uk-navbar-left" id="navBar2"> <!--Adding an ID for styling in css -->
         <ul class="uk-navbar-nav">
+          <img src="https://img.icons8.com/color/100/000000/dinosaur.png" alt="Profile photo" width="100px" height="100px"/>
           <li class="uk-active"><a href="">Username</a></li>
           <li class="uk-active"><a href="">Level 1</a></li>
           <li class="uk-active"><a href="">Brave Bunny</a></li>
