--- a/challenge.html
+++ b/challenge.html
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>We Challenge You</title>
-    <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
-    />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fear Setting</title>
     <link rel="stylesheet" href="Develop/Style/normalize.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"/>
     <link rel="stylesheet" href="Develop/Style/style.css" />
     <link rel="" href="userGuide.html"/>
-</head>
-<body>
+  
+  </head>
+  <body>
+    <nav class="uk-navbar-container" uk-navbar>
+      <div class="uk-navbar-left" id="navBar1"> <!--Adding an ID for styling in css -->
+        <ul class="uk-navbar-nav" id="navBarLinks">
+          <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
+          <li class="uk-active"><a href="">Creat an Account</a></li>
+          <li class="uk-active"><a href="">User Guide</a></li>
+          <li class="uk-active"><a href=""></a></li>
+          <li class="uk-active"><a href="">Monthly Plan</a></li>
+          <li class="uk-active"><a href="">We Challenge You</a></li>
+          <li><a href=""></a></li>
+        </ul>
+      </div>
+    </nav>
+    <nav class="uk-navbar-container" uk-navbar>
+       <div class="uk-navbar-left" id="navBar2"> <!--Adding an ID for styling in css -->
+        <ul class="uk-navbar-nav">
+          <li class="uk-active"><a href="">Username</a></li>
+          <li class="uk-active"><a href="">Level 1</a></li>
+          <li class="uk-active"><a href="">Brave Bunny</a></li>
+          <li class="uk-parent"><a href=""></a></li>
+          <li><a href=""></a></li>
+        </ul>
+        <progress class="uk-progress" value="5" max="100"></progress>
+      </div>
+    </nav>
     
-</body>
+    <ul uk-accordion>
+        <li class="uk-open">
+            <a class="uk-accordion-title" href="#">Item 1</a>
+            <div class="uk-accordion-content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </li>
+        <li>
+            <a class="uk-accordion-title" href="#">Item 2</a>
+            <div class="uk-accordion-content">
+                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+            </div>
+        </li>
+        <li>
+            <a class="uk-accordion-title" href="#">Item 3</a>
+            <div class="uk-accordion-content">
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+            </div>
+        </li>
+    </ul>
+
+    <button class="uk-button uk-button-default">Invite Friends</button>
+  
+  <script></script>
+  <script></script>
+  <script></script>
+  </body>
 </html>
