--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <!-- <button class="uk-button uk-button-default" a href="inviteFriends.html">Invite Friends</button> -->
   
   <script></script>
-  <script></script>
+  <script src="script2.js"></script>
   <script></script>
   </body>
 </html>
