Fixed grid width settings.

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         <progress class="uk-progress" value="5" max="100"></progress>
       </div>
     </nav>
-    <div uk-grid>
-      <div class="uk-column-1-3">
+    <div uk-grid class="uk-grid">
+      <div class="uk-width-1-3">
         <div id="fearsOfMonth" class="uk-card uk-card-body uk-card-default">
           <h3 class="uk-card-title">Fears of the Month</h3>
           <form>
@@ -54,6 +54,8 @@
             <li>List item 3<input class="uk-checkbox" type="checkbox" /></li>
         </ul>
         </div>
+      </div>
+      <div class="uk-width-1-3">
         <div id="fearOfDay" class="uk-card uk-card-body uk-card-default">
           <h3 class="uk-card-title">Fear of the Day</h3>
           <form>
@@ -66,6 +68,8 @@
             <li>List item 3<input class="uk-checkbox" type="checkbox" /></li>
         </ul>
         </div>
+      </div>
+      <div class="uk-width-1-3">
         <div class="uk-card uk-card-body uk-card-default">
           <h3 id="fearsConquered" class="uk-card-title">Fears Conquered</h3>
         </div>
