Commented out li in index.html. Added some working code to remove items from local storage.

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
             <button id="fearsOfMonthBtn" class="uk-button uk-button-primary">Add Fear</button>
           </form>
           <ul id="monthList" class="uk-list uk-list-striped">
-            <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
+            <!-- <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
             <li>List item 2<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li>
+            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li> -->
         </ul>
         </div>
       </div>
@@ -63,9 +63,9 @@
             <button id="fearOfDayBtn" class="uk-button uk-button-primary">Add Fear</button>
           </form>
           <ul id="dayList" class="uk-list uk-list-striped">
-            <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
+            <!-- <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
             <li>List item 2<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li>
+            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li> -->
         </ul>
         </div>
       </div>
@@ -74,9 +74,9 @@
           <h3 id="fearsConquered" class="uk-card-title">Fears Conquered</h3>
         </div>
         <ul id="conqueredList" class="uk-list uk-list-striped">
-          <li>List item 1</li>
+          <!-- <li>List item 1</li>
           <li>List item 2</li>
-          <li>List item 3</li>
+          <li>List item 3</li> -->
       </ul>
       </div>
     </div>
