populated userGuide, readme.md, added other invite friends links, modified index.html

--- a/challenge.html
+++ b/challenge.html
@@ -19,7 +19,7 @@
           <li class="uk-active"><a href="">User Guide</a></li>
           <li class="uk-active"><a href=""></a></li>
           <li class="uk-active"><a href="">Monthly Plan</a></li>
-          <li class="uk-active"><a href="">We Challenge You</a></li>
+          <li class="uk-active"><a href="">Challenge Yourself</a></li>
           <li><a href=""></a></li>
         </ul>
       </div>
@@ -41,21 +41,27 @@
         <li class="uk-open">
             <a class="uk-accordion-title" href="#">Item 1</a>
             <div class="uk-accordion-content">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>Define: List the worst things that could happen</p> <!--Adding input text below of a list that's 1 to 10-->
             </div>
         </li>
         <li>
             <a class="uk-accordion-title" href="#">Item 2</a>
             <div class="uk-accordion-content">
-                <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+                <p>Prevent: List how you can stop the above bad things</p> <!--Adding input text below of a list that's 1 to 10-->
             </div>
         </li>
         <li>
             <a class="uk-accordion-title" href="#">Item 3</a>
             <div class="uk-accordion-content">
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+                <p>Repair: If the worst happens, list how to repair each bad thing.</p> <!--Adding input text below of a list that's 1 to 10-->
             </div>
         </li>
+        <li>
+          <a class="uk-accordion-title" href="#">Item 3</a>
+          <div class="uk-accordion-content">
+              <p>Benefits: List all possible benefits from taking this action</p> <!--Adding input text below of a list that's 1 to 10-->
+          </div>
+      </li>
     </ul>
 
     <button class="uk-button uk-button-default">Invite Friends</button>
