linked config.js, replaced Monthly Plan with Home on navbar in index.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <li class="uk-active"><a href="">Create an Account</a></li>
           <li class="uk-active"><a href="userGuide.html">User Guide</a></li>
           <li class="uk-active"><a href=""></a></li>
-          <li class="uk-active"><a href="monthlyPlan.html">Monthly Plan</a></li>
+          <li class="uk-active"><a href="index.html">Home</a></li>
           <li class="uk-active"><a href="challenge.html">We Challenge You</a></li>
           <li><a href=""></a></li>
         </ul>
@@ -85,7 +85,8 @@
    </form>
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="Develop/script.js"></script>
+  <!-- <script src="Develop/config.js"></script>
+  <script src="Develop/script.js"></script> -->
   <script src="Develop/script2.js"></script>
   <script></script>
   </body>
