Modal function now working. Making progress on fears of month to fears conquered.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
       href="https://cdn.jsdelivr.net/npm/uikit@3.4.0/dist/css/uikit.min.css"
     />
     <link rel="stylesheet" href="Develop/Style/style.css" />
-
   </head>
   <body>
     <nav class="uk-navbar-container" uk-navbar>
@@ -54,9 +53,7 @@
         </div>
       </form>
     </div>
-      </div>
     
-    </div>
     <div uk-grid class="uk-grid">
       <div class="uk-width-1-3">
         <div id="fearsOfMonth" class="uk-card uk-card-body uk-card-default">
@@ -66,9 +63,6 @@
             <button id="fearsOfMonthBtn" class="uk-button uk-button-primary">Add Fear</button>
           </form>
           <ul id="monthList" class="uk-list uk-list-striped">
-            <!-- <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 2<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li> -->
         </ul>
         </div>
       </div>
@@ -80,9 +74,6 @@
             <button id="fearOfDayBtn" class="uk-button uk-button-primary">Add Fear</button>
           </form>
           <ul id="dayList" class="uk-list uk-list-striped">
-            <!-- <li>List item 1<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 2<input class="uk-checkbox" type="checkbox" /></li>
-            <li>List item 3<input class="uk-checkbox" type="checkbox" /></li> -->
         </ul>
         </div>
       </div>
@@ -91,9 +82,6 @@
           <h3 id="fearsConquered" class="uk-card-title">Fears Conquered</h3>
         </div>
         <ul id="conqueredList" class="uk-list uk-list-striped">
-          <!-- <li>List item 1</li>
-          <li>List item 2</li>
-          <li>List item 3</li> -->
       </ul>
       </div>
     </div>
@@ -102,7 +90,7 @@
    </form>
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="Develop/uikit.js"></script>
+  <!-- <script src="Develop/uikit.js"></script> -->
   <!-- <script src="Develop/config.js"></script>
   <script src="Develop/script.js"></script> -->
   <script src="Develop/script2.js"></script>
