--- a/challenge.html
+++ b/challenge.html
@@ -109,11 +109,28 @@
 
     <hr class="uk-divider-icon">
 
+    <div class = "celebration">
+      <div class = "uk-container">
+        <div class = "uk-child-width-1-2 uk-grid" uk-grid>
+          <div class = "uk-first-column">
+            <div class = "uk-panel gif">
+              
+            </div>
+          </div>
+          <div class = "second-column">
+            <div class = "uk-panel quote">
+              
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <button class="uk-button uk-button-default">Invite Friends</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="Develop/config.js"></script>
   <script src="Develop/script.js"></script>
-  <script src="Develop/script2.js"></script>
+  <!-- <script src="Develop/script2.js"></script> -->
 <script>
 
   if(localStorage.getItem("bigFearObject") !== null) {
