--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="Develop/uikit.js"></script> -->
-  <!-- <script src="Develop/config.js"></script>
-  <script src="Develop/script.js"></script> -->
+  <script src="Develop/config.js"></script>
+  <script src="Develop/script.js"></script>
   <script src="Develop/script2.js"></script>
   <script></script>
   </body>
