--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </div>
     </div>
     <form action="inviteFriends.html" method="get" target="_blank">
-      <button class="uk-button uk-button-default" a href="inviteFriends.html">Invite Friends</button>
+      <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
    </form>
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
