--- a/inviteFriends.html
+++ b/inviteFriends.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
 
-  <img src="Develop/Images/friends-1.png" alt="Paris" class="center">
+  <!-- <img src="Develop/Images/friends-1.png" alt="Paris" class="center"> -->
   <div class="sharethis-inline-share-buttons"></div>
    
   
