--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="uk-navbar-right">
           <div class = "uk-navbar-item"></div>
             <ul class="uk-navbar-nav" id="navBarLinks">
-              <li><a href="index.html">Home</a></li>
-              <li><a href="">Create an Account</a></li>
+              <li class="uk-active"><a href="index.html">Home</a></li>
+              <li><a id="createUser" href="#usernameModal">Create an Account</a></li>
               <li><a href="userGuide.html">User Guide</a></li>
-              <li class="uk-active"><a href="challenge.html">Challenge Yourself</a></li>
+              <li><a href="challenge.html">Challenge Yourself</a></li>
             </ul>
           </div>
         </div>
@@ -58,7 +58,7 @@
         </div>
       </form>
     </div>
-    
+
     <div uk-grid class="uk-grid">
       <div class="uk-width-1-3">
         <div id="fearsOfMonth" class="uk-card uk-card-body uk-card-default">
@@ -114,10 +114,9 @@
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="Develop/uikit.js"></script> -->
-  <!-- <script src="Develop/config.js"></script>
-  <script src="Develop/script.js"></script> -->
+  <script src="Develop/config.js"></script>
   <script src="Develop/script2.js"></script>
-  <script></script>
+  <script src="Develop/script.js"></script>
   </body>
 </html>
 
