--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class = "uk-navbar-center">
           <ul class="uk-navbar-nav">
             <img src="https://img.icons8.com/color/100/000000/dinosaur.png"   alt="Profile photo" width="100px" height="100px"/>
-            <li id="user" class="uk-active"><a href=""></a></a></li>
-            <li class="uk-active"><a href="">Level 1</a></li>
-            <li class="uk-active"><a href="">Brave Bunny</a></li>
+            <li class="uk-disabled"><a id="user" href=""></a></li>
+            <li class="uk-disabled"><a href="">Level 1</a></li>
+            <li class="uk-disabled"><a href="">Brave Bunny</a></li>
           </ul>
           <progress class="uk-progress" value="5" max="100"></progress>
         </div>
