finished up apis still need to style

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
 
     <div class = "celebration">
-      <div class = "uk-container">
+      <div class = "uk-container headerPosition">
         <div class = "uk-child-width-1-2 uk-grid" uk-grid>
           <div class = "uk-first-column">
             <div class = "uk-panel gif">
@@ -110,7 +110,7 @@
 
     <form action="inviteFriends.html" method="get" target="_blank">
       <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
-   </form>
+    </form>
 
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
