--- a/challenge.html
+++ b/challenge.html
@@ -110,86 +110,29 @@
     <hr class="uk-divider-icon">
 
     <div class = "celebration">
-      <div class = "uk-container">
-        <div class = "uk-child-width-1-2 uk-grid" uk-grid>
-          <div class = "uk-first-column">
-            <div class = "uk-panel gif">
-              
+      <div class = "uk-container headerPosition">
+          <div class = "uk-child-width-1-2 uk-grid" uk-grid>
+            <div class = "uk-first-column">
+              <div class = "uk-panel gif">
+
+              </div>
+            </div>
+            <div class = "second-column">
+              <div class = "uk-panel quote">
+
+              </div>
             </div>
           </div>
-          <div class = "second-column">
-            <div class = "uk-panel quote">
-              
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
-    <button class="uk-button uk-button-default">Invite Friends</button>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="Develop/config.js"></script>
-  <script src="Develop/script.js"></script>
-  <script src="Develop/script2.js"></script>
-<script>
+    <form action="inviteFriends.html" method="get" target="_blank">
+      <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
+    </form>
 
-  if(localStorage.getItem("bigFearObject") !== null) {
-    var bigFearObject = JSON.parse(localStorage.getItem("bigFearObject"));
-    $(".chosenFear").text(bigFearObject[0].chosenFear);
-    for (var i = 0; i < bigFearObject[0].addedThings.length; i++){
-      $("#defineList1").append($("<li>").text(bigFearObject[0].addedThings[i]));
-    }
-    for (var i = 0; i < bigFearObject[0].addedPreventions.length; i++){
-      $("#preventList1").append($("<li>").text(bigFearObject[0].addedPreventions[i]));
-    }
-    for (var i = 0; i < bigFearObject[0].addedRepairs.length; i++){
-      $("#repairList1").append($("<li>").text(bigFearObject[0].addedRepairs[i]));
-    }
-    for (var i = 0; i < bigFearObject[0].addedBenefits.length; i++){
-      $("#benefitsList1").append($("<li>").text(bigFearObject[0].addedBenefits[i]));
-    }
-  } else {
-    var bigFearObject = [{chosenFear: "", addedThings: [], addedPreventions: [], addedRepairs: [], addedBenefits: []}];
-  }
-
-  $("#changeFear1").on("click", function() {
-    $("#defineList1").empty();
-    $("#preventList1").empty();
-    $("#repairList1").empty();
-    $("#benefitsList1").empty();
-    bigFearObject = [{chosenFear: "", addedThings: [], addedPreventions: [], addedRepairs: [], addedBenefits: []}];
-    $(".chosenFear").text($(".bigFear").val());
-    bigFearObject[0].chosenFear = $(".bigFear").val();
-  });
-
-  $("#addThing1").on("click", function () {
-    var addedThing = $("<li>").text($(".newWorst").val());
-    $("#defineList1").append(addedThing);
-    bigFearObject[0].addedThings.push($(".newWorst").val());
-  });
-
-  $("#addPrevention1").on("click", function () {
-    var addedPrevention = $("<li>").text($(".newPrevention").val());
-    $("#preventList1").append(addedPrevention);
-    bigFearObject[0].addedPreventions.push($(".newPrevention").val());
-  });
-
-  $("#addHow1").on("click", function () {
-    var addedRepair = $("<li>").text($(".newRepair").val());
-    $("#repairList1").append(addedRepair);
-    bigFearObject[0].addedRepairs.push($(".newRepair").val());
-  });
-
-  $("#addBenefit1").on("click", function () {
-    var addedBenefit = $("<li>").text($(".newBenefit").val());
-    $("#benefitsList1").append(addedBenefit);
-    bigFearObject[0].addedBenefits.push($(".newBenefit").val());
-  });
-
-  $("#saveFear").on("click", function () {
-    localStorage.setItem("bigFearObject", JSON.stringify(bigFearObject));
-  })
-
-</script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="Develop/config.js"></script>
+    <script src="Develop/script.js"></script>
+    <script src="Develop/script3.js"></script>
   </body>
 </html>
