--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <div class="uk-navbar-right">
           <div class = "uk-navbar-item"></div>
             <ul class="uk-navbar-nav" id="navBarLinks">
-              <li class="uk-active"><a href="index.html">Home</a></li>
-              <li><a id="createUser" href="#usernameModal">Create an Account</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="">Create an Account</a></li>
               <li><a href="userGuide.html">User Guide</a></li>
-              <li><a href="challenge.html">Challenge Yourself</a></li>
+              <li class="uk-active"><a href="challenge.html">Challenge Yourself</a></li>
             </ul>
           </div>
         </div>
@@ -34,10 +34,10 @@
        <div class="uk-navbar" id="navBar2"> <!--Adding an ID for styling in css -->
         <div class = "uk-navbar-center">
           <ul class="uk-navbar-nav">
-            <img src="https://img.icons8.com/color/100/000000/dinosaur.png"   alt="Profile photo" width="100px" height="100px"/>
-            <li class="uk-disabled"><a id="user" href=""></a></li>
-            <li class="uk-disabled"><a href="">Level 1</a></li>
-            <li class="uk-disabled"><a href="">Brave Bunny</a></li>
+            <img src ="https://api.adorable.io/avatars/285/abott@adorable.png"  alt="Profile photo" width="100px" height="100px"/>
+            <li id="user" class="uk-active"><a href=""></a></a></li>
+            <li class="uk-active"><a href="">Level 1</a></li>
+            <li class="uk-active"><a href="">Brave Bunny</a></li>
           </ul>
           <progress class="uk-progress" value="5" max="100"></progress>
         </div>
@@ -58,7 +58,7 @@
         </div>
       </form>
     </div>
-
+    
     <div uk-grid class="uk-grid">
       <div class="uk-width-1-3">
         <div id="fearsOfMonth" class="uk-card uk-card-body uk-card-default">
@@ -92,7 +92,7 @@
     </div>
 
     <div class = "celebration">
-      <div class = "uk-container headerPosition">
+      <div class = "uk-container">
         <div class = "uk-child-width-1-2 uk-grid" uk-grid>
           <div class = "uk-first-column">
             <div class = "uk-panel gif">
@@ -110,14 +110,14 @@
 
     <form action="inviteFriends.html" method="get" target="_blank">
       <button class="uk-button uk-button-default" a href="inviteFriends.html">Share With Friends</button>
-    </form>
-
+   </form>
     
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- <script src="Develop/uikit.js"></script> -->
   <script src="Develop/config.js"></script>
   <script src="Develop/script.js"></script>
   <script src="Develop/script2.js"></script>
-  <script src="Develop/script.js"></script>
+  <script></script>
   </body>
 </html>
 
