chaning color, adding title of site, adding avatars to all pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="uk-navbar" id="navBar1"> <!--Adding an ID for styling in css -->
         <div class="uk-navbar-left">
           <img src="https://img.icons8.com/carbon-copy/100/000000/ghost.png"/>
+          <p>Fear Setting</p>
         </div>
         <div class="uk-navbar-right">
           <div class = "uk-navbar-item"></div>
@@ -34,7 +35,7 @@
        <div class="uk-navbar" id="navBar2"> <!--Adding an ID for styling in css -->
         <div class = "uk-navbar-center">
           <ul class="uk-navbar-nav">
-            <img src ="https://api.adorable.io/avatars/285/abott@adorable.png"  alt="Profile photo" width="100px" height="100px"/>
+            <img id="adorable-avatar"  src ="https://api.adorable.io/avatars/285/abott@adorable.png"  alt="Profile photo" width="100px" height="100px"/>
             <li id="user" class="uk-active"><a href=""></a></a></li>
             <li class="uk-active"><a href="">Level 1</a></li>
             <li class="uk-active"><a href="">Brave Bunny</a></li>
