--- a/userGuide.html
+++ b/userGuide.html
@@ -34,7 +34,7 @@
          <div class="uk-navbar" id="navBar2"> <!--Adding an ID for styling in css -->
           <div class = "uk-navbar-center">
             <ul class="uk-navbar-nav">
-              <img src="https://img.icons8.com/color/100/000000/dinosaur.png"   alt="Profile photo" width="100px" height="100px"/>
+              <img id="adorable-avatar" src ="https://api.adorable.io/avatars/285/abott@adorable.png"   alt="Profile photo" width="100px" height="100px"/>
               <li class="uk-disabled"><a id="user" href=""></a></li>
               <li class="uk-disabled"><a href="">Level 1</a></li>
               <li class="uk-disabled"><a href="">Brave Bunny</a></li>
